--- a/mis_addons/ninja_quiz/views/ninja_quiz_views.xml
+++ b/mis_addons/ninja_quiz/views/ninja_quiz_views.xml
@@ -1,4 +1,5 @@
 <odoo>
+
     <!-- Vista de formulario para Ninja Quiz -->
     <record id="view_ninja_quiz_form" model="ir.ui.view">
         <field name="name">ninja.quiz.form</field>
@@ -19,6 +20,7 @@
                                         <tree editable="bottom">
                                             <field name="name"/>
                                             <field name="is_correct"/>
+                                            <field name="points"/>
                                         </tree>
                                     </field>
                                 </tree>
@@ -42,17 +44,74 @@
         </field>
     </record>
 
-    <!-- Acción que abre la vista de Quizzes -->
+    <!-- Acción para abrir los quizzes -->
     <record id="action_ninja_quiz" model="ir.actions.act_window">
         <field name="name">Quizzes</field>
         <field name="res_model">ninja.quiz</field>
         <field name="view_mode">tree,form</field>
     </record>
 
-    <!-- Menú de la aplicación Ninja Quiz -->
+    <!-- Menú principal de Ninja Quiz -->
     <menuitem id="ninja_quiz_menu" name="Ninja Quiz" sequence="10"/>
     <menuitem id="ninja_quiz_main_menu"
               name="Gestión de Quizzes"
               parent="ninja_quiz_menu"
               action="action_ninja_quiz"/>
+
+    <!-- Vista de formulario para Jugador -->
+    <record id="view_ninja_player_form" model="ir.ui.view">
+        <field name="name">ninja.player.form</field>
+        <field name="model">ninja.player</field>
+        <field name="arch" type="xml">
+            <form string="Jugador">
+                <sheet>
+                    <group>
+                        <field name="name"/>
+                        <field name="quiz_id"/>
+                        <field name="total_score" readonly="1"/>
+                    </group>
+                    <notebook>
+                        <page string="Respuestas">
+                            <field name="answer_ids">
+                                <tree editable="bottom">
+                                    <field name="question_id"/>
+                                    <field name="answer_id"/>
+                                    <field name="is_correct" readonly="1"/>
+                                    <field name="points_awarded" readonly="1"/>
+                                </tree>
+                            </field>
+                        </page>
+                    </notebook>
+                </sheet>
+            </form>
+        </field>
+    </record>
+
+    <!-- Vista de lista para Jugador -->
+    <record id="view_ninja_player_tree" model="ir.ui.view">
+        <field name="name">ninja.player.tree</field>
+        <field name="model">ninja.player</field>
+        <field name="arch" type="xml">
+            <tree>
+                <field name="name"/>
+                <field name="quiz_id"/>
+                <field name="total_score"/>
+            </tree>
+        </field>
+    </record>
+
+    <!-- Acción para abrir la vista de jugadores -->
+    <record id="action_ninja_player" model="ir.actions.act_window">
+        <field name="name">Jugadores</field>
+        <field name="res_model">ninja.player</field>
+        <field name="view_mode">tree,form</field>
+    </record>
+
+    <!-- Menú para Jugadores -->
+    <menuitem id="ninja_player_menu"
+              name="Participantes"
+              parent="ninja_quiz_menu"
+              action="action_ninja_player"
+              sequence="20"/>
+
 </odoo>
