--- a/mis_addons/ninja_quiz/views/ninja_quiz_views.xml
+++ b/mis_addons/ninja_quiz/views/ninja_quiz_views.xml
@@ -16,13 +16,6 @@
                             <field name="question_ids">
                                 <tree editable="bottom">
                                     <field name="name"/>
-                                    <field name="answer_ids">
-                                        <tree editable="bottom">
-                                            <field name="name"/>
-                                            <field name="is_correct"/>
-                                            <field name="points"/>
-                                        </tree>
-                                    </field>
                                 </tree>
                             </field>
                         </page>
@@ -113,5 +106,58 @@
               parent="ninja_quiz_menu"
               action="action_ninja_player"
               sequence="20"/>
+
+    <!-- Vista de formulario para Pregunta -->
+    <record id="view_ninja_question_form" model="ir.ui.view">
+        <field name="name">ninja.question.form</field>
+        <field name="model">ninja.question</field>
+        <field name="arch" type="xml">
+            <form string="Pregunta del Quiz">
+                <sheet>
+                    <group>
+                        <field name="name"/>
+                        <field name="quiz_id"/>
+                    </group>
+                    <notebook>
+                        <page string="Respuestas">
+                            <field name="answer_ids">
+                                <tree editable="bottom">
+                                    <field name="name"/>
+                                    <field name="is_correct"/>
+                                    <field name="points"/>
+                                </tree>
+                            </field>
+                        </page>
+                    </notebook>
+                </sheet>
+            </form>
+        </field>
+    </record>
+
+    <!-- Vista de lista para Pregunta -->
+    <record id="view_ninja_question_tree" model="ir.ui.view">
+        <field name="name">ninja.question.tree</field>
+        <field name="model">ninja.question</field>
+        <field name="arch" type="xml">
+            <tree>
+                <field name="name"/>
+                <field name="quiz_id"/>
+            </tree>
+        </field>
+    </record>
+
+    <!-- Acción para abrir las preguntas -->
+    <record id="action_ninja_question" model="ir.actions.act_window">
+        <field name="name">Preguntas</field>
+        <field name="res_model">ninja.question</field>
+        <field name="view_mode">tree,form</field>
+    </record>
+
+    <!-- Menú para Preguntas -->
+    <menuitem id="ninja_question_menu"
+              name="Gestión de Preguntas"
+              parent="ninja_quiz_menu"
+              action="action_ninja_question"
+              sequence="15"/>
 
 </odoo>
